--- a/Volunteer Iowa Site/Volunteer Iowa Site.csproj
+++ b/Volunteer Iowa Site/Volunteer Iowa Site.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -173,7 +175,28 @@
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\EventModels.cs" />
+    <Compile Include="Models\Log.cs">
+      <DependentUpon>logs.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\LogModels.cs" />
+    <Compile Include="Models\logs.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>logs.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\logs.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>logs.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\logs.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>logs.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\UserProfile.cs">
+      <DependentUpon>logs.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Widget\WidgetController.cs" />
   </ItemGroup>
@@ -238,6 +261,23 @@
     <Content Include="Global.asax" />
     <Content Include="Widget\script.js" />
     <Content Include="Widget\style.css" />
+    <EntityDeploy Include="Models\logs.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>logs.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\logs.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>logs.edmx</DependentUpon>
+      <LastGenOutput>logs.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\logs.edmx.diagram">
+      <DependentUpon>logs.edmx</DependentUpon>
+    </Content>
+    <Content Include="Models\logs.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>logs.edmx</DependentUpon>
+      <LastGenOutput>logs.cs</LastGenOutput>
+    </Content>
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
@@ -316,6 +356,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
