--- a/Volunteer Iowa Site/Web.config
+++ b/Volunteer Iowa Site/Web.config
@@ -14,7 +14,7 @@
     <add name="Volunteer_Iowa_Site.Models.LogDataContext" connectionString="Data Source=(LocalDb)\v11.0;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Volunteer_Iowa_Site-20130305161059.Models.LogDataContext.mdf" providerName="System.Data.SqlClient" />
     <add name="Volunteer_Iowa_Site.Models.EventDataContext" connectionString="Data Source=(LocalDb)\v11.0;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Volunteer_Iowa_Site-20130305161059.Models.EventDataContext.mdf" providerName="System.Data.SqlClient" />
     -->
-  </connectionStrings>
+  <add name="Entities" connectionString="metadata=res://*/Models.logs.csdl|res://*/Models.logs.ssdl|res://*/Models.logs.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\v11.0;attachdbfilename=|DataDirectory|\aspnet-Volunteer_Iowa_Site-20130305161059.mdf;initial catalog=aspnet-Volunteer_Iowa_Site-20130305161059;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -23,7 +23,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5"><assemblies><add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" /></assemblies></compilation>
     <httpRuntime targetFramework="4.5" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
